# CircularBuffer

./: .gitignore  CMakeLists.txt  README.md  analyze_benchmarks.cmd  analyze_perf.cmd  codecov22.cmd  design.md
.cursor/rules/: ascii.mdc  coding_style.mdc  comment_style.mdc  performance.mdc  power-shell.mdc
.github/workflows/: ci.yml  coverage.yml  linux-clang.yml  linux-gcc.yml  macos.yml  performance.yml  sanitizers.yml  windows.yml
circular_buffer/: CMakeLists.txt  circular_buffer.h
tests/: circular_buffer_test.cpp  iterator_debug_test.cpp  performance_test.cpp  test_common.h
tools/: analyze_benchmarks.py
